[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ui/ControlButton.gd" type="Script" id=1]
[ext_resource path="res://Imgs/black.png" type="Texture" id=2]
[ext_resource path="res://Imgs/black_frame.png" type="Texture" id=3]
[ext_resource path="res://fonts/Zpix.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="ControlButton" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
texture = ExtResource( 2 )
texture_selected = ExtResource( 3 )
text = ""

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 128, 32 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite_selected" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 136, 40 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 255.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="gui_input" from="." to="." method="_on_ControlButton_gui_input"]

[connection signal="mouse_entered" from="." to="." method="_on_ControlButton_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_ControlButton_mouse_exited"]


